# scake

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  Pipfile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml
scake/: AutoInit.py  AutoScake.py  ScakeDict.py  ScakeSetup.py  __init__.py  auto.py  cli.py  graph.py  node.py  rule.py  scake.py  setup.py  structure.py
scake/libcore/: __init__.py  config_loader.py  sck_format.py  sck_graph.py  sck_log.py  sck_singleton.py  utils.py
tests/: conf.yml  run.sh  test_auto_init.py  test_auto_scake_init.py  test_building_scake.py  test_cli.py  test_flow.py  test_init_obj.py  test_ref_dict.py  test_ref_list.py  test_ref_obj_attr.py  test_ref_obj_complex.py  test_ref_obj_multi_level.py  test_scake.py  test_scake_class.py
tests/foo/: __init__.py  bar.py
tests/sample_yaml/: complex_flow.yaml  flexible_flow.yaml  simple_flow.yaml
