[metadata]
name=scake
download_url=https://github.com/kyzas/scake/tarball/master
description=A flexible framework for Python
long_description=file:README.md
long_description_content_type=text/markdown
author=kyzas
author_email=kyznano@gmail.com
maintainer=kyzas
maintainer_email=kyznano@gmail.com
url=https://github.com/kyzas/scake
license=MIT
license_files=LICENSE
classifiers=
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation

[options]
packages=
    scake
python_requires=>=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4,
install_requires=
    PyYAML

#[options.entry_points]
#console_scripts=
#    scake=scake.cli:main

[bdist_wheel]
universal=1
