[metadata]
name=scake
download_url=https://github.com/kyzas/scake/tarball/master
description=A flexible framework for Python
long_description=file:README.md
long_description_content_type=text/markdown
author=kyzas
author_email=kyznano@gmail.com
maintainer=kyzas
maintainer_email=kyznano@gmail.com
url=https://github.com/kyzas/scake
license=MIT
license_files=LICENSE
classifiers=
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation

[options]
packages=
    scake
python_requires=>=3.5, <4,
install_requires=
    omegaconf==2.3.0
    ray==2.5.1

#[options.entry_points]
#console_scripts=
#    scake=scake.cli:main

[bdist_wheel]
universal=1
